--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   url: https://gitlab.cern.ch/dmc/{{ name }}/-/archive/v{{ version }}/{{ name }}-v{{ version }}.tar.gz
   sha256: 3298f353ea46e7ec811ee9364273c868bbd0fde34b17cc33a0dbc4fd591fc585
+  patches:
+    - Use-json-c-in-gfal_http_qos.patch
 
 build:
   number: 0
