--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -16,6 +16,8 @@ cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '9'
+davix:
+- '0.8'
 docker_image:
 - quay.io/condaforge/linux-anvil-aarch64
 glib:
