--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -12,6 +12,8 @@ cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '9'
+davix:
+- '0.8'
 docker_image:
 - quay.io/condaforge/linux-anvil-ppc64le
 glib:
