--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -1,21 +1,19 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '9'
-cdt_name:
-- cos7
+- '11'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '9'
+- '11'
 davix:
 - '0.8'
-docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le
 gct:
 - 6.2.1629922860
 glib:
@@ -26,6 +24,8 @@ libssh2:
 - '1'
 libuuid:
 - '2'
+macos_machine:
+- arm64-apple-darwin20.0.0
 pin_run_as_build:
   json-c:
     max_pin: x.x
@@ -34,7 +34,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 target_platform:
-- linux-ppc64le
+- osx-arm64
 xrootd:
 - '5'
 zip_keys:
