Fix macOS compilation some more

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ source:
   url: https://gitlab.cern.ch/dmc/{{ name }}/-/archive/v{{ version }}/{{ name }}-v{{ version }}.tar.gz
   sha256: 0b7b963d9ddbdb6f2fe9c6988a0ee4e4c9bc0f5228154fd1e42f3c4f7909b7d9
   patches:
+    - 0001-Drop-CMakeCXX11Support.patch
     - 003-cryptopp.patch 
 
 
